# KriegDerCreatorBackend

./: .env  Cargo.toml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230814083119_equipment.sql  20230814083120_character.sql  20230814083134_user.sql  20230816084709_seed.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  user_email.rs
src/routes/: mod.rs  user_data.rs
tests/api/: health_check.rs  helpers.rs
