[package]
name = "kriegdercreator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kriegdercreator"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
futures-util = "0.3.28"
tokio = {version="1",features=["macros","rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.13.3"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.0"
secrecy = { version = "0.8.0", features = ["serde"]}
tracing-actix-web = "0.7.0"
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.16"
azure_storage_blobs = "0.11.0"
azure_core = "0.11.0"
azure_storage = "0.11.0"
futures = "0.3.28"
rand = { version = "0.8", features =["std_rng"]}
lettre = "0.10.4"
thiserror = "1"
anyhow = "1"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
argon2 = { version = "0.5", features = ["std"] }
chrono =  { version = "0.4.15", features = ["serde"] }

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = ["runtime-tokio-rustls","macros","postgres","uuid","chrono","migrate","offline"]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde"
]

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
claims = "0.7"
quickcheck = "0.9.2"
serde_json = "1"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
tokio = {version="1",features=["macros","rt"]}
wiremock = "0.5"
linkify = "0.9"
